# x10_python_sdk

./: benchmarking.py  pyproject.toml
examples/: onboarding_example.py  placed_order_example_advanced.py  placed_order_example_simple.py  simple_client_example.py  x10_throughput_latency_test.py
tests/fixtures/: candles.py  orderbook.py
tests/perpetual/: test_l2_key_derivation.py  test_onboarding_payload.py  test_order_object.py  test_orderbook_price_impact.py  test_stream_client.py  test_trading_client.py  test_transfer_object.py  test_withdrawal_object.py
tests/utils/: test_date.py  test_http.py  test_model.py
x10/: config.py
x10/perpetual/: accounts.py  amounts.py  assets.py  candles.py  configuration.py  contract.py  fees.py  funding_rates.py  markets.py  order_object.py  orderbook.py  orderbooks.py  orders.py  positions.py  trades.py  transfer_object.py  withdrawal_object.py
x10/perpetual/simple_client/: simple_trading_client.py
x10/perpetual/stream_client/: perpetual_stream_connection.py  stream_client.py
x10/perpetual/trading_client/: account_module.py  base_module.py  info_module.py  markets_information_module.py  order_management_module.py  trading_client.py
x10/perpetual/user_client/: onboarding.py  user_client.py
x10/utils/: __init__.py  date.py  http.py  model.py  nonce.py  starkex.py
