[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x10-python-trading"
version = "0.4.4"
description = "Python client for X10 API"
authors = [{ name = "X10", email = "tech@ex10.org" }]
requires-python = "~=3.10"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiosonic",
    "ecdsa==0.18.0",
    "eth-account==0.13.4",
    "eth_typing==4.4.0",
    "mpmath==1.3.0",
    "fast-stark-crypto==0.3.7",
    "numpy==1.26.2",
    "picows",
    "pyhamcrest>=2.1.0",
    "pyyaml==6.0.1",
    "sortedcontainers==2.4.0",
    "sympy==1.12",
    "uvloop>=0.21.0",
    "pydantic>=2.7.4",
    "fastecdsa>=3.0.1",
    "pytest>=7.4.3",
    "freezegun>=1.4.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.1",
    "strenum>=0.4.15",
]

[project.urls]
Repository = "https://github.com/x10xchange/python_sdk"
Documentation = "https://api.docs.extended.exchange/"

[dependency-groups]
dev = [
    "freezegun==1.4.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "mypy-extensions==1.0.0",
    "PyHamcrest==2.1.0",
    "pytest==7.4.3",
    "pytest-aiohttp==1.0.5",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-forked==1.6.0",
    "pytest-mock==3.12.0",
    "python-dotenv==1.0.1",
    "safety==2.4.0b2",
    "tox==4.11.4",
    "types-pyyaml==6.0.12.12",
    "typing-extensions==4.9.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "vendor",
    "x10",
]

[tool.hatch.build.targets.wheel]
include = [
    "vendor",
    "x10",
]

[tool.mypy]
packages = ["examples", "tests", "x10"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "vendor.starkware.*"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
